FVTTv9: Fix ColourPicker Alignment
Fixes #91

--- a/css/swatch.scss
+++ b/css/swatch.scss
@@ -5,7 +5,7 @@
 #swatch {
 	width: max-content;
 	height: max-content;
-	position: relative;
+	position: absolute;
 	border: 2px solid rgb(0, 0, 0);
 	border-radius: 50%;
 	overflow: hidden;
